src/gen/dBaseParser.py
# Generated from dBaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dBaseParser ( Parser ):

    grammarFileName = "dBaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<='", "'>='", "'!='", "'=='", 
                     "'<'", "'>'", "'::'", "':'", "'='", "'('", "')'", "'+'", 
                     "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "PARAMETER", "WITH", "ENDWITH", "PROGRAM", 
                      "RETURN", "FOR", "TO", "ENDFOR", "STEP", "BREAK", 
                      "DO", "WHILE", "ENDDO", "LOCAL", "NEW", "DELETE", 
                      "SUPER", "CLASS", "ENDCLASS", "OF", "THIS", "METHOD", 
                      "ENDMETHOD", "PROPERTY", "IF", "ELSE", "ENDIF", "WRITE", 
                      "CALL", "COMMA", "DOT", "FLOAT", "NUMBER", "STRING", 
                      "LE", "GE", "NE", "EQ", "LT", "GT", "DCOLON", "COLON", 
                      "ASSIGN", "LPAREN", "RPAREN", "PLUS", "MINUS", "STAR", 
                      "SLASH", "TRUE", "FALSE", "AND", "OR", "NOT", "IDENT", 
                      "WS", "LINECOMMENT_DBA", "LINECOMMENT_DBB", "LINECOMMENT_CPP", 
                      "BLOCKCOMMENT_START", "COMMENT_NEST_START", "COMMENT_END", 
                      "COMMENT_ANY" ]

    RULE_input = 0
    RULE_item = 1
    RULE_statement = 2
    RULE_breakStmt = 3
    RULE_returnStmt = 4
    RULE_doStmt = 5
    RULE_doTarget = 6
    RULE_programRef = 7
    RULE_parameterStmt = 8
    RULE_paramNames = 9
    RULE_callExpr = 10
    RULE_doWhileStatement = 11
    RULE_condition = 12
    RULE_logicalOr = 13
    RULE_logicalAnd = 14
    RULE_logicalNot = 15
    RULE_comparison = 16
    RULE_compareOp = 17
    RULE_localDeclStmt = 18
    RULE_localAssignStmt = 19
    RULE_deleteStmt = 20
    RULE_forStmt = 21
    RULE_numberExpr = 22
    RULE_assignStmt = 23
    RULE_lvalue = 24
    RULE_dottedRef = 25
    RULE_exprStmt = 26
    RULE_ifStmt = 27
    RULE_block = 28
    RULE_writeStmt = 29
    RULE_writeArg = 30
    RULE_classDecl = 31
    RULE_classBody = 32
    RULE_classMember = 33
    RULE_withStmt = 34
    RULE_withTarget = 35
    RULE_withBody = 36
    RULE_withAssignStmt = 37
    RULE_withLvalue = 38
    RULE_propertyDecl = 39
    RULE_methodDecl = 40
    RULE_paramList = 41
    RULE_callStmt = 42
    RULE_callTarget = 43
    RULE_qualifiedName = 44
    RULE_argList = 45
    RULE_identifier = 46
    RULE_expr = 47
    RULE_additiveExpr = 48
    RULE_multiplicativeExpr = 49
    RULE_postfixExpr = 50
    RULE_postfixSuffix = 51
    RULE_newExpr = 52
    RULE_memberExpr = 53
    RULE_literal = 54
    RULE_primary = 55

    ruleNames =  [ "input", "item", "statement", "breakStmt", "returnStmt", 
                   "doStmt", "doTarget", "programRef", "parameterStmt", 
                   "paramNames", "callExpr", "doWhileStatement", "condition", 
                   "logicalOr", "logicalAnd", "logicalNot", "comparison", 
                   "compareOp", "localDeclStmt", "localAssignStmt", "deleteStmt", 
                   "forStmt", "numberExpr", "assignStmt", "lvalue", "dottedRef", 
                   "exprStmt", "ifStmt", "block", "writeStmt", "writeArg", 
                   "classDecl", "classBody", "classMember", "withStmt", 
                   "withTarget", "withBody", "withAssignStmt", "withLvalue", 
                   "propertyDecl", "methodDecl", "paramList", "callStmt", 
                   "callTarget", "qualifiedName", "argList", "identifier", 
                   "expr", "additiveExpr", "multiplicativeExpr", "postfixExpr", 
                   "postfixSuffix", "newExpr", "memberExpr", "literal", 
                   "primary" ]

    EOF = Token.EOF
    PARAMETER=1
    WITH=2
    ENDWITH=3
    PROGRAM=4
    RETURN=5
    FOR=6
    TO=7
    ENDFOR=8
    STEP=9
    BREAK=10
    DO=11
    WHILE=12
    ENDDO=13
    LOCAL=14
    NEW=15
    DELETE=16
    SUPER=17
    CLASS=18
    ENDCLASS=19
    OF=20
    THIS=21
    METHOD=22
    ENDMETHOD=23
    PROPERTY=24
    IF=25
    ELSE=26
    ENDIF=27
    WRITE=28
    CALL=29
    COMMA=30
    DOT=31
    FLOAT=32
    NUMBER=33
    STRING=34
    LE=35
    GE=36
    NE=37
    EQ=38
    LT=39
    GT=40
    DCOLON=41
    COLON=42
    ASSIGN=43
    LPAREN=44
    RPAREN=45
    PLUS=46
    MINUS=47
    STAR=48
    SLASH=49
    TRUE=50
    FALSE=51
    AND=52
    OR=53
    NOT=54
    IDENT=55
    WS=56
    LINECOMMENT_DBA=57
    LINECOMMENT_DBB=58
    LINECOMMENT_CPP=59
    BLOCKCOMMENT_START=60
    COMMENT_NEST_START=61
    COMMENT_END=62
    COMMENT_ANY=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dBaseParser.EOF, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.ItemContext)
            else:
                return self.getTypedRuleContext(dBaseParser.ItemContext,i)


        def getRuleIndex(self):
            return dBaseParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput" ):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = dBaseParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 39424119835970662) != 0):
                self.state = 112
                self.item()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(dBaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(dBaseParser.MethodDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(dBaseParser.StatementContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = dBaseParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.classDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.methodDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(dBaseParser.IfStmtContext,0)


        def doStmt(self):
            return self.getTypedRuleContext(dBaseParser.DoStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(dBaseParser.BreakStmtContext,0)


        def parameterStmt(self):
            return self.getTypedRuleContext(dBaseParser.ParameterStmtContext,0)


        def writeStmt(self):
            return self.getTypedRuleContext(dBaseParser.WriteStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(dBaseParser.AssignStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(dBaseParser.ExprStmtContext,0)


        def localAssignStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalAssignStmtContext,0)


        def localDeclStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalDeclStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(dBaseParser.CallStmtContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(dBaseParser.ForStmtContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(dBaseParser.DoWhileStatementContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(dBaseParser.DeleteStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(dBaseParser.ReturnStmtContext,0)


        def withStmt(self):
            return self.getTypedRuleContext(dBaseParser.WithStmtContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = dBaseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.doStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.breakStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.parameterStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.writeStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.assignStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.exprStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.localAssignStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 133
                self.localDeclStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 134
                self.callStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 135
                self.classDecl()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 136
                self.forStmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 137
                self.doWhileStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 138
                self.deleteStmt()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 139
                self.returnStmt()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 140
                self.withStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(dBaseParser.BREAK, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = dBaseParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(dBaseParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(dBaseParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = dBaseParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(dBaseParser.RETURN)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 146
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(dBaseParser.DO, 0)

        def doTarget(self):
            return self.getTypedRuleContext(dBaseParser.DoTargetContext,0)


        def WITH(self):
            return self.getToken(dBaseParser.WITH, 0)

        def argList(self):
            return self.getTypedRuleContext(dBaseParser.ArgListContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_doStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoStmt" ):
                listener.enterDoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoStmt" ):
                listener.exitDoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoStmt" ):
                return visitor.visitDoStmt(self)
            else:
                return visitor.visitChildren(self)




    def doStmt(self):

        localctx = dBaseParser.DoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_doStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(dBaseParser.DO)
            self.state = 150
            self.doTarget()
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 151
                self.match(dBaseParser.WITH)
                self.state = 152
                self.argList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoTargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programRef(self):
            return self.getTypedRuleContext(dBaseParser.ProgramRefContext,0)


        def IDENT(self):
            return self.getToken(dBaseParser.IDENT, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_doTarget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoTarget" ):
                listener.enterDoTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoTarget" ):
                listener.exitDoTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoTarget" ):
                return visitor.visitDoTarget(self)
            else:
                return visitor.visitChildren(self)




    def doTarget(self):

        localctx = dBaseParser.DoTargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_doTarget)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.programRef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(dBaseParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.IDENT)
            else:
                return self.getToken(dBaseParser.IDENT, i)

        def DOT(self):
            return self.getToken(dBaseParser.DOT, 0)

        def PROGRAM(self):
            return self.getToken(dBaseParser.PROGRAM, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_programRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramRef" ):
                listener.enterProgramRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramRef" ):
                listener.exitProgramRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramRef" ):
                return visitor.visitProgramRef(self)
            else:
                return visitor.visitChildren(self)




    def programRef(self):

        localctx = dBaseParser.ProgramRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_programRef)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [55]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(dBaseParser.IDENT)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31:
                    self.state = 160
                    self.match(dBaseParser.DOT)
                    self.state = 161
                    self.match(dBaseParser.IDENT)


                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(dBaseParser.PROGRAM)
                self.state = 165
                self.match(dBaseParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(dBaseParser.PARAMETER, 0)

        def paramNames(self):
            return self.getTypedRuleContext(dBaseParser.ParamNamesContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_parameterStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterStmt" ):
                listener.enterParameterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterStmt" ):
                listener.exitParameterStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterStmt" ):
                return visitor.visitParameterStmt(self)
            else:
                return visitor.visitChildren(self)




    def parameterStmt(self):

        localctx = dBaseParser.ParameterStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(dBaseParser.PARAMETER)
            self.state = 169
            self.paramNames()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamNamesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.IDENT)
            else:
                return self.getToken(dBaseParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.COMMA)
            else:
                return self.getToken(dBaseParser.COMMA, i)

        def getRuleIndex(self):
            return dBaseParser.RULE_paramNames

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamNames" ):
                listener.enterParamNames(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamNames" ):
                listener.exitParamNames(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamNames" ):
                return visitor.visitParamNames(self)
            else:
                return visitor.visitChildren(self)




    def paramNames(self):

        localctx = dBaseParser.ParamNamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramNames)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(dBaseParser.IDENT)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 172
                self.match(dBaseParser.COMMA)
                self.state = 173
                self.match(dBaseParser.IDENT)
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(dBaseParser.PrimaryContext,0)


        def LPAREN(self):
            return self.getToken(dBaseParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(dBaseParser.RPAREN, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.DOT)
            else:
                return self.getToken(dBaseParser.DOT, i)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.IDENT)
            else:
                return self.getToken(dBaseParser.IDENT, i)

        def argList(self):
            return self.getTypedRuleContext(dBaseParser.ArgListContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_callExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallExpr" ):
                listener.enterCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallExpr" ):
                listener.exitCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallExpr" ):
                return visitor.visitCallExpr(self)
            else:
                return visitor.visitChildren(self)




    def callExpr(self):

        localctx = dBaseParser.CallExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_callExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.primary()
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 180
                self.match(dBaseParser.DOT)
                self.state = 181
                self.match(dBaseParser.IDENT)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(dBaseParser.LPAREN)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 57438517502050304) != 0):
                self.state = 188
                self.argList()

